# Sentry

./: .envrc  .gitignore  DEVELOPMENT.md  INSTALLATION_COMPLETE.txt  NEW_QUERIES_INDEX.md  NEW_QUERIES_README.md  NEW_QUERIES_SUMMARY.md  README.md  flake.nix  linters.nix  pyproject.toml
.github/workflows/: deploy-streamlit-in-snowflake.yml  lints-and-checkers.yml  mk-mdbook.yml  tear-down-and-deploy-native-app.yml
deployment_models/: Streamlit-in-Snowflake.sql
deployment_models/git-repository/: README.md  apps.nix  create_all.sql
deployment_models/local-docker/: Dockerfile  app.nix  docker-endpoint.sh
deployment_models/native-app/: grant_usage_on_snowflake.sql  setup.sql  snowflake.yml
deployment_models/native-app/app/: README.md  manifest.yml  setup_script.sql
deployment_models/trust-center-scanner/: .version  snowflake.yml
deployment_models/trust-center-scanner/app/: manifest.yml  setup_script.sql  tc_extension_manifest.yml
deployment_models/trust-center-scanner/common_code/: helpers.py
docs/: Control mapping.md  apps.nix  book.toml  custom.css
docs/assets/sample-xmls/: example_snowflake.azure.xml
docs/src/: README.md  SUMMARY.md
docs/src/development/: CONTRIBUTING.md  adding-a-query.md  architecture.md  docs.md
docs/src/reference/: control-mapping.md  log-sources.md  queries.md
nix/apps/: default.nix  lib.nix
nix/apps/doc/: default.nix
nix/apps/git/: default.nix  setup.sql  teardown.sql
nix/apps/local-docker/: default.nix
nix/apps/local-streamlit/: default.nix
nix/apps/native-app/: default.nix
nix/apps/sis/: default.nix  setup.sql  teardown.sql
perimeter-security-control/: .gitignore  CHANGELOG  LICENSE  README.md  environment.yml  pyproject.toml  streamlit_app.py
src/: Authentication.py  environment.yml  snowflake.yml
src/common/: queries.py  tiles.py  utils.py
src/common/query_proxy/: __init__.py  classes.py
src/pages/: Configuration_Management.py  Data_Sharing.py  Identity_Management.py  Least_Privileged_Access.py  May30_TTPs_Guidance.py  Privileged_Access.py  Temp.py
src/queries/: __init__.py
src/queries/accountadmin_grants/: README.md  accountadmin_grants.sql
src/queries/accountadmin_no_mfa/: README.md  accountadmin_no_mfa.sql
src/queries/auth_by_method/: README.md  auth_by_method.sql
src/queries/auth_bypassing/: README.md  auth_bypassing.sql
src/queries/avg_number_of_role_grants_per_user/: README.md  avg_number_of_role_grants_per_user.sql
src/queries/bloated_roles/: README.md  bloated_roles.sql
src/queries/default_role_check/: README.md  default_role_check.sql
src/queries/destructive_operations_monitoring/: README.md  destructive_operations_monitoring.sql
src/queries/external_stage_monitoring/: README.md  external_stage_monitoring.sql
src/queries/failed_authorization_attempts/: README.md  failed_authorization_attempts.sql
src/queries/failed_ddl_operations/: README.md  failed_ddl_operations.sql
src/queries/grants_to_public/: README.md  grants_to_public.sql
src/queries/grants_to_unmanaged_schemas_outside_schema_owner/: README.md  grants_to_unmanaged_schemas_outside_schema_owner.sql
src/queries/least_used_role_grants/: README.md  least_used_role_grants.sql
src/queries/masking_policy_changes/: README.md  masking_policy_changes.sql
src/queries/may30_ttps_guidance_anomalous_application_access/: README.md  may30_ttps_guidance_anomalous_application_access.sql
src/queries/may30_ttps_guidance_factor_breakdown/: README.md
src/queries/may30_ttps_guidance_ip_logins/: README.md  may30_ttps_guidance_ip_logins.sql
src/queries/may30_ttps_guidance_ips_with_factor/: README.md  may30_ttps_guidance_ips_with_factor.sql
src/queries/may30_ttps_guidance_query_history/: README.md
src/queries/may30_ttps_guidance_static_creds/: README.md
src/queries/most_dangerous_person/: README.md  most_dangerous_person.sql
src/queries/network_policy_changes/: README.md  network_policy_changes.sql
src/queries/num_failures/: README.md  num_failures.sql
src/queries/oauth_token_monitoring/: README.md  oauth_token_monitoring.sql
src/queries/privileged_object_changes_by_user/: README.md  privileged_object_changes_by_user.sql
src/queries/row_access_policy_monitoring/: README.md  row_access_policy_monitoring.sql
src/queries/scim_token_lifecycle/: README.md  scim_token_lifecycle.sql
src/queries/service_account_activity/: README.md  service_account_activity.sql
src/queries/session_hijacking_detection/: README.md  session_hijacking_detection.sql
src/queries/sharing_access_count_by_column/: README.md  sharing_access_count_by_column.sql
src/queries/sharing_access_over_time_by_consumer/: README.md  sharing_access_over_time_by_consumer.sql
src/queries/sharing_listing_usage/: README.md  sharing_listing_usage.sql
src/queries/sharing_listings_alter/: README.md  sharing_listings_alter.sql
src/queries/sharing_reader_creation_monitor/: README.md  sharing_reader_creation_monitor.sql
src/queries/sharing_replication_history/: README.md  sharing_replication_history.sql
src/queries/sharing_share_alter/: README.md  sharing_share_alter.sql
src/queries/sharing_table_joins_by_consumer/: README.md  sharing_table_joins_by_consumer.sql
src/queries/stale_users/: README.md  stale_users.sql
src/queries/suspicious_data_exfiltration/: README.md  (+1 more)
src/scripts/: __init__.py  scripts.py
tests/: conftest.py  test_all_queries.py  test_classes.py  test_scripts.py
(+47 files in other folders)
