[project]
name = "Sentry"
version = "0.1.0"
authors = [
    { name = "Vladimir Timofeenko", email = "vladimir.timofeenko@snowflake.com" },
]
description = "Repository of security-related queries for Snowflake"
readme = "README.md"
license = "Apache-2.0"

requires-python = "~=3.11.0"
dependencies = [
    "streamlit==1.52.2",
    "snowflake-snowpark-python",
    "pydantic==2.12.4",
    "tabulate==0.9.0",
    "toolz==1.1.0",
    # Pinned deps from https://repo.anaconda.com/pkgs/snowflake/
    "idna==3.11",
    "setuptools==80.10.2",
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.3.0",
    "ruff>=0.3.0",
    "watchdog>=4.0.0",
    "pytest>=8.1.1",
]

[project.urls]
Repository = "https://github.com/Snowflake-Labs/Sentry"
Homepage = "https://github.com/Snowflake-Labs/Sentry"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = ["common", "queries", "scripts", "vendored"]

[tool.black]
# Debatable, but on modern displays is OK
# Making explicit in the config file
line-length = 120

[tool.ruff.lint]
select = [
  "A", # flake builtins
  "D", # docstyle, very angry
  "N", # pep8-naming
  "TID", # for banned inputs
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"streamlit.file_uploader".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.camera_input".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.chat_message".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.chat_input".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.download_button".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.bokeh_chart".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.scatter_chart".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.components".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.experimental_set_query_params".msg = "This feature is not supported in Streamlit in Snowflake"
"streamlit.experimental_get_query_params".msg = "This feature is not supported in Streamlit in Snowflake"

[tool.pytest.ini_options]
# Test directory
testpaths = [ "tests" ]
# Source code of the app is at ./src
pythonpath = [ "src" ]
markers = [
    "online: Run tests requiring connection to Snowflake"
]
