[project]
name = "perimeter-security-controls"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "snowflake-snowpark-python==1.26.0",
    "streamlit==1.39.0",
    "toolz==0.12.0",
]

[dependency-groups]
dev = [
    "snowflake-cli>=3.2.1",
    "watchdog>=5.0.3",
]
